--- a/Frontend/client/public/index.html
+++ b/Frontend/client/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Anton|Averia+Serif+Libre|Cabin|Courgette|Gothic+A1|Lobster|Pacifico|Rye|Stardos+Stencil" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  </head>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
