Added styling to random background generator on App.js so that it fills the page without bottom scrollbar. Styled usersetup.js.

--- a/Frontend/client/public/index.html
+++ b/Frontend/client/public/index.html
@@ -21,6 +21,8 @@
         background-image: url('https://source.unsplash.com/1600x900/?weddings');
         background-repeat: no-repeat;
         background-size: cover;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
     </style>
     <!--
