Changed the font on app.

--- a/Frontend/client/public/index.html
+++ b/Frontend/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Anton|Averia+Serif+Libre|Cabin|Courgette|Gothic+A1|Lobster|Pacifico|Rye|Stardos+Stencil" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
   </head>
     <meta
       name="viewport"
